--- a/tmux.conf
+++ b/tmux.conf
@@ -7,14 +7,11 @@ bind-key C-a send-prefix
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
 
- start with window 1 (instead of 0)
-ret -g base-index 1
+# start with window 1 (instead of 0)
+set -g base-index 1
 
 # start with pane 1
-ret -g pane-base-index 1
-
-# screen mode
-set -g default-terminal "screen-256color"
+set -g pane-base-index 1
 
 # source config file
 bind r source-file ~/.tmux.conf
