--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,6 @@
-# change prefix to Ctrl-a (like in gnu-screen)
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-
-# shell
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -25,63 +20,15 @@ bind v split-window -v
 # window switching
 unbind n
 bind = next-window
+
 #unbind p
 bind - previous-window
 bind -n C-Right next-window
 bind -n C-Left previous-window
-# with mouse (click on pretty little boxes)
-set -g mouse-select-window on
 
-# panes
-set -g mouse-select-pane on
-set -g pane-border-fg colour4
-set -g pane-active-border-fg colour12
-# resize panes with mouse (drag borders)
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-
-# status line
-set -g status-utf8 on
-set -g status-justify left
-set -g status-bg colour0
-set -g status-fg default 
-set -g status-interval 1
-
-# messaging
-set -g message-fg black
-set -g message-bg blue
-set -g message-command-fg black
-set -g message-command-bg blue
-
-#window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour2
-
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=colour0]#[bg=colour5] #I #[bg=colour0]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=colour0]#[fg=colour1] #I #[fg=colour4]#[bg=colour0] #W "
-setw -g window-status-current-bg colour11
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-fg colour3
-setw -g window-status-attr reverse
-setw -g window-status-content-bg colour238
-setw -g window-status-content-fg colour11
-setw -g window-status-content-attr bold,blink,reverse
-
-# Info on right (requires stlarch-terminusmod font)
-set -g status-right-length 60
-set -g status-right '#[bg=colour0]#[fg=colour4]%a %H:%M'
-
-# Info on left
-#set -g status-left ''
-
-# tmux clock
-set -g clock-mode-colour blue
-
-# -d $HOME/bin  some key-binding changes
-bind x kill-pane
-bind X next-layout
-bind Z previous-layout
+set -g status-justify centre
+set -g status-left ''
+set -g status-right ''
+set -g status-bg default
+setw -g window-status-format '#[fg=colour1,bold,bg=colour236,bold] #I '
+setw -g window-status-current-format '#[fg=colour236,bold,bg=colour1,bold] #I '
