--- a/tmux.conf
+++ b/tmux.conf
@@ -25,3 +25,7 @@ bind = next-window
 bind - previous-window
 bind -n C-Right next-window
 bind -n C-Left previous-window
+
+set-option -g status-bg default
+set-option -g status-fg default
+
