--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "zsh/zsh-syntax-highlighting"]
 	path = zsh/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "zsh/z"]
+	path = zsh/z
+	url = https://github.com/rupa/z
+[submodule "bin/fu"]
+	path = bin/fu
+	url = https://github.com/samirahmed/fu
