--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,6 @@
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
-  - [sudo ln -s "$HOME/.zsh/pure/pure.zsh" /usr/local/share/zsh/site-functions/prompt_pure_setup]
-  - [sudo ln -s "$HOME/.zsh/pure/async.zsh" /usr/local/share/zsh/site-functions/async]
+  #- [sudo ln -s "$HOME/.zsh/pure/pure.zsh" /usr/local/share/zsh/site-functions/prompt_pure_setup]
+  #- [sudo ln -s "$HOME/.zsh/pure/async.zsh" /usr/local/share/zsh/site-functions/async]
 
