--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,5 +7,5 @@
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
   - [mkdir $HOME/.zfunctions]
-  - [ln -s "$HOME/.zsh/pure/pure.zsh" "$HOME/.zfunctions/prompt_pure_setup]
-  - [ln -s "$HOME/.zsh/pure/async.zsh" "$HOME/.zfunctions/async"
+  - [ln -s "$HOME/.zsh/pure/pure.zsh" "$HOME/.zfunctions/prompt_pure_setup"]
+  - [ln -s "$HOME/.zsh/pure/async.zsh" "$HOME/.zfunctions/async"]
