--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,6 +3,7 @@
 - link:
     ~/.zsh: zsh/
     ~/.zshrc: zshrc
+    ~/.emacs.d: emacs.d/
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
